--- a/index.html
+++ b/index.html
@@ -449,18 +449,26 @@
 
 <footer>
 
-    <ul id="footer-social-list">
-        <li class="footer-social-list-item">
-            <i class="fa fa-facebook-f"></i>
+    <ul class="footer-social-list">
+        <li>
+            <div class="footer-social-list-item fb">
+                <a href=""><i class="fa fa-facebook-f"></i></a>
+            </div>
         </li>
-        <li class="footer-social-list-item">
-            <i class="fa fa-twitter"></i>
+        <li>
+            <div class="footer-social-list-item twitter">
+                <a href=""><i class="fa fa-twitter"></i></a>
+            </div>
         </li>
-        <li class="footer-social-list-item">
-            <i class="fa fa-google-plus"></i>
+        <li>
+            <div class="footer-social-list-item google">
+                <a href=""><i class="fa fa-google-plus"></i></a>
+            </div>
         </li>
-        <li class="footer-social-list-item">
-            <i class="fa fa-linkedin"></i>
+        <li>
+            <div class="footer-social-list-item linkedin">
+                <a href=""><i class="fa fa-linkedin"></i></a>
+            </div>
         </li>
     </ul>
 
